Skip download, just assume data is loaded onto each machine

--- a/class/logistic.ipynb
+++ b/class/logistic.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,257 +22,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading TCGA, TARGET and GTEX expression data from UCSC Xena\n",
-      "CPU times: user 19.7 s, sys: 18 s, total: 37.6 s\n",
-      "Wall time: 3min 51s\n"
+      "CPU times: user 235 ms, sys: 1min 58s, total: 1min 58s\n",
+      "Wall time: 2min 13s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "if not os.path.exists(\"/scratch/tcga_target_gtex.h5\"):\n",
-    "    print(\"Downloading Wrangled TCGA, TARGET and GTEX training data\")\n",
-    "    r = requests.get(\"https://bme230badmindiag811.blob.core.windows.net/data/tcga_target_gtex.h5\", stream=True)\n",
-    "    r.raise_for_status()\n",
-    "    with open(\"/scratch/tcga_target_gtex.h5\", \"wb\") as f:\n",
-    "        for chunk in r.iter_content(chunk_size=32768):\n",
-    "            f.write(chunk)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>5S_rRNA</th>\n",
-       "      <th>5_8S_rRNA</th>\n",
-       "      <th>7SK</th>\n",
-       "      <th>A1BG</th>\n",
-       "      <th>A1BG-AS1</th>\n",
-       "      <th>A1CF</th>\n",
-       "      <th>A2M</th>\n",
-       "      <th>A2M-AS1</th>\n",
-       "      <th>A2ML1</th>\n",
-       "      <th>A2ML1-AS1</th>\n",
-       "      <th>...</th>\n",
-       "      <th>snoU2-30</th>\n",
-       "      <th>snoU2_19</th>\n",
-       "      <th>snoU83B</th>\n",
-       "      <th>snoZ196</th>\n",
-       "      <th>snoZ278</th>\n",
-       "      <th>snoZ40</th>\n",
-       "      <th>snoZ6</th>\n",
-       "      <th>snosnR66</th>\n",
-       "      <th>uc_338</th>\n",
-       "      <th>yR211F11.2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>GTEX-1117F-0226-SM-5GZZ7</th>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.965800</td>\n",
-       "      <td>4.4595</td>\n",
-       "      <td>0.9343</td>\n",
-       "      <td>-5.0116</td>\n",
-       "      <td>7.5126</td>\n",
-       "      <td>0.8164</td>\n",
-       "      <td>-2.1140</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>0.158328</td>\n",
-       "      <td>-9.9658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GTEX-1117F-0426-SM-5EGHI</th>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.965800</td>\n",
-       "      <td>1.1512</td>\n",
-       "      <td>-1.2828</td>\n",
-       "      <td>-6.5064</td>\n",
-       "      <td>6.0777</td>\n",
-       "      <td>-2.3147</td>\n",
-       "      <td>0.5568</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-2.126224</td>\n",
-       "      <td>-9.9658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GTEX-1117F-0526-SM-5EGHJ</th>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.965800</td>\n",
-       "      <td>5.2411</td>\n",
-       "      <td>0.8488</td>\n",
-       "      <td>-6.5064</td>\n",
-       "      <td>10.0319</td>\n",
-       "      <td>0.1257</td>\n",
-       "      <td>-1.1172</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-0.864951</td>\n",
-       "      <td>-9.9658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GTEX-1117F-0626-SM-5N9CS</th>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.965800</td>\n",
-       "      <td>5.4758</td>\n",
-       "      <td>2.6325</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>9.7572</td>\n",
-       "      <td>1.7702</td>\n",
-       "      <td>-1.8836</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-0.918501</td>\n",
-       "      <td>-9.9658</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GTEX-1117F-0726-SM-5GIEN</th>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-3.406063</td>\n",
-       "      <td>4.5534</td>\n",
-       "      <td>1.3051</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>7.7931</td>\n",
-       "      <td>-0.0725</td>\n",
-       "      <td>-2.2447</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-9.9658</td>\n",
-       "      <td>-2.018394</td>\n",
-       "      <td>-9.9658</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 58581 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                          5S_rRNA  5_8S_rRNA       7SK    A1BG  A1BG-AS1  \\\n",
-       "GTEX-1117F-0226-SM-5GZZ7  -9.9658    -9.9658 -9.965800  4.4595    0.9343   \n",
-       "GTEX-1117F-0426-SM-5EGHI  -9.9658    -9.9658 -9.965800  1.1512   -1.2828   \n",
-       "GTEX-1117F-0526-SM-5EGHJ  -9.9658    -9.9658 -9.965800  5.2411    0.8488   \n",
-       "GTEX-1117F-0626-SM-5N9CS  -9.9658    -9.9658 -9.965800  5.4758    2.6325   \n",
-       "GTEX-1117F-0726-SM-5GIEN  -9.9658    -9.9658 -3.406063  4.5534    1.3051   \n",
-       "\n",
-       "                            A1CF      A2M  A2M-AS1   A2ML1  A2ML1-AS1  \\\n",
-       "GTEX-1117F-0226-SM-5GZZ7 -5.0116   7.5126   0.8164 -2.1140    -9.9658   \n",
-       "GTEX-1117F-0426-SM-5EGHI -6.5064   6.0777  -2.3147  0.5568    -9.9658   \n",
-       "GTEX-1117F-0526-SM-5EGHJ -6.5064  10.0319   0.1257 -1.1172    -9.9658   \n",
-       "GTEX-1117F-0626-SM-5N9CS -9.9658   9.7572   1.7702 -1.8836    -9.9658   \n",
-       "GTEX-1117F-0726-SM-5GIEN -9.9658   7.7931  -0.0725 -2.2447    -9.9658   \n",
-       "\n",
-       "                             ...      snoU2-30  snoU2_19  snoU83B  snoZ196  \\\n",
-       "GTEX-1117F-0226-SM-5GZZ7     ...       -9.9658   -9.9658  -9.9658  -9.9658   \n",
-       "GTEX-1117F-0426-SM-5EGHI     ...       -9.9658   -9.9658  -9.9658  -9.9658   \n",
-       "GTEX-1117F-0526-SM-5EGHJ     ...       -9.9658   -9.9658  -9.9658  -9.9658   \n",
-       "GTEX-1117F-0626-SM-5N9CS     ...       -9.9658   -9.9658  -9.9658  -9.9658   \n",
-       "GTEX-1117F-0726-SM-5GIEN     ...       -9.9658   -9.9658  -9.9658  -9.9658   \n",
-       "\n",
-       "                          snoZ278  snoZ40   snoZ6  snosnR66    uc_338  \\\n",
-       "GTEX-1117F-0226-SM-5GZZ7  -9.9658 -9.9658 -9.9658   -9.9658  0.158328   \n",
-       "GTEX-1117F-0426-SM-5EGHI  -9.9658 -9.9658 -9.9658   -9.9658 -2.126224   \n",
-       "GTEX-1117F-0526-SM-5EGHJ  -9.9658 -9.9658 -9.9658   -9.9658 -0.864951   \n",
-       "GTEX-1117F-0626-SM-5N9CS  -9.9658 -9.9658 -9.9658   -9.9658 -0.918501   \n",
-       "GTEX-1117F-0726-SM-5GIEN  -9.9658 -9.9658 -9.9658   -9.9658 -2.018394   \n",
-       "\n",
-       "                          yR211F11.2  \n",
-       "GTEX-1117F-0226-SM-5GZZ7     -9.9658  \n",
-       "GTEX-1117F-0426-SM-5EGHI     -9.9658  \n",
-       "GTEX-1117F-0526-SM-5EGHJ     -9.9658  \n",
-       "GTEX-1117F-0626-SM-5N9CS     -9.9658  \n",
-       "GTEX-1117F-0726-SM-5GIEN     -9.9658  \n",
-       "\n",
-       "[5 rows x 58581 columns]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "X = pd.read_hdf(\"/scratch/tcga_target_gtex.h5\", \"expression\")\n",
     "X.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +166,7 @@
        "GTEX-1117F-0726-SM-5GIEN       Normal  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
