Update to initial configuration

--- a/class/nn.ipynb
+++ b/class/nn.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Hello Machine Learning\n",
+    "## Neural Network Classifier\n",
     "\n",
-    "Train a simple logistic regression model to predict tumor vs. normal from gene expression data"
+    "Build a simple neural network to classify expression data to classify tumor/normal"
    ]
   },
   {
@@ -15,34 +15,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import requests\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 235 ms, sys: 1min 58s, total: 1min 58s\n",
-      "Wall time: 2min 13s\n"
+      "CPU times: user 185 ms, sys: 1.66 s, total: 1.84 s\n",
+      "Wall time: 1.84 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "X = pd.read_hdf(\"/scratch/tcga_target_gtex.h5\", \"expression\")\n",
+    "X = pd.read_hdf(\"data/tcga_target_gtex_train.h5\", \"expression\")\n",
     "X.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,13 +164,13 @@
        "GTEX-1117F-0726-SM-5GIEN       Normal  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Y = pd.read_hdf(\"/scratch/tcga_target_gtex.h5\", \"labels\")\n",
+    "Y = pd.read_hdf(\"data/tcga_target_gtex_train.h5\", \"labels\")\n",
     "Y.head()"
    ]
   }
